// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing functions around references reference variable 1`] = `
Array [
  Object {
    "location": Object {
      "range": Object {
        "end": 383,
        "start": 376,
      },
      "uri": "case/reference/references.php",
    },
    "memberLocation": undefined,
    "ranges": undefined,
    "refKind": 2,
    "refName": "$refVar",
    "scope": null,
    "scopeRange": Object {
      "end": 567,
      "start": 0,
    },
    "type": TypeComposite {
      "_types": Array [
        TypeName {
          "name": "$refVar",
        },
        TypeName {
          "name": "boolean",
        },
      ],
      "existingTypes": Object {
        "$refVar": true,
        "boolean": true,
      },
    },
  },
  Object {
    "location": Object {
      "range": Object {
        "end": 425,
        "start": 418,
      },
      "uri": "case/reference/references.php",
    },
    "memberLocation": undefined,
    "ranges": undefined,
    "refKind": 2,
    "refName": "$refVar",
    "scope": null,
    "scopeRange": Object {
      "end": 567,
      "start": 0,
    },
    "type": TypeComposite {
      "_types": Array [
        TypeName {
          "name": "$refVar",
        },
        TypeName {
          "name": "boolean",
        },
        TypeName {
          "name": "int",
        },
      ],
      "existingTypes": Object {
        "$refVar": true,
        "boolean": true,
        "int": true,
      },
    },
  },
  Object {
    "location": Object {
      "range": Object {
        "end": 445,
        "start": 437,
      },
      "uri": "case/reference/references.php",
    },
    "memberLocation": undefined,
    "ranges": undefined,
    "refKind": 2,
    "refName": "$refVar2",
    "scope": null,
    "scopeRange": Object {
      "end": 567,
      "start": 0,
    },
    "type": TypeComposite {
      "_types": Array [
        TypeName {
          "name": "$refVar2",
        },
        TypeName {
          "name": "$refVar",
        },
        TypeName {
          "name": "boolean",
        },
        TypeName {
          "name": "int",
        },
      ],
      "existingTypes": Object {
        "$refVar": true,
        "$refVar2": true,
        "boolean": true,
        "int": true,
      },
    },
  },
]
`;

exports[`Testing functions around references references for global variables 1`] = `
Array [
  Method {
    "description": "",
    "func": Function {
      "description": "",
      "name": undefined,
      "parameters": Array [],
      "scopeVar": ScopeVar {
        "globalVariables": Map {},
        "isTop": false,
        "location": Object {},
        "variables": Object {},
      },
      "types": Array [
        TypeName {
          "name": "boolean",
        },
      ],
    },
    "location": Object {
      "range": Object {
        "end": 753,
        "start": 699,
      },
      "uri": "case/class_methods.php",
    },
    "modifier": SymbolModifier {
      "modifier": 0,
      "visibility": 1,
    },
    "name": TypeName {
      "name": "method1",
    },
    "scope": TypeName {
      "name": "\\\\ClassWithMethod",
    },
  },
]
`;

exports[`Testing functions around references references for global variables 2`] = `
Array [
  Method {
    "description": "",
    "func": Function {
      "description": "",
      "name": undefined,
      "parameters": Array [],
      "scopeVar": ScopeVar {
        "globalVariables": Map {},
        "isTop": false,
        "location": Object {},
        "variables": Object {},
      },
      "types": Array [
        TypeName {
          "name": "float",
        },
      ],
    },
    "location": Object {
      "range": Object {
        "end": 976,
        "start": 922,
      },
      "uri": "case/class_methods.php",
    },
    "modifier": SymbolModifier {
      "modifier": 0,
      "visibility": 1,
    },
    "name": TypeName {
      "name": "method4",
    },
    "scope": TypeName {
      "name": "\\\\ClassWithMethod",
    },
  },
]
`;

exports[`Testing functions around references references for global variables 3`] = `
Array [
  Property {
    "_variable": Variable {
      "expression": Expression {},
      "location": Object {},
      "name": "",
      "refKind": 2,
      "scope": null,
      "scopeRange": undefined,
      "type": TypeComposite {
        "_types": Array [
          TypeName {
            "name": "boolean",
          },
        ],
        "existingTypes": Object {
          "boolean": true,
        },
      },
    },
    "description": "",
    "location": Object {
      "range": Object {
        "end": 127,
        "start": 109,
      },
      "uri": "case/class_methods.php",
    },
    "modifier": SymbolModifier {
      "modifier": 0,
      "visibility": 1,
    },
    "name": "$property1",
    "scope": TypeName {
      "name": "\\\\ClassWithMethod",
    },
  },
]
`;

exports[`Testing functions around references references for global variables 4`] = `
Array [
  Method {
    "description": "",
    "func": Function {
      "description": "",
      "name": undefined,
      "parameters": Array [
        Parameter {
          "description": "",
          "location": Object {},
          "name": "$param1",
          "refKind": 3,
          "scope": null,
          "type": TypeComposite {
            "_types": Array [],
            "existingTypes": Object {},
          },
          "value": "",
        },
        Parameter {
          "description": "",
          "location": Object {},
          "name": "$param2",
          "refKind": 3,
          "scope": null,
          "type": TypeComposite {
            "_types": Array [],
            "existingTypes": Object {},
          },
          "value": "",
        },
      ],
      "scopeVar": ScopeVar {
        "globalVariables": Map {},
        "isTop": false,
        "location": Object {},
        "variables": Object {
          "$param1": TypeComposite {
            "_types": Array [],
            "existingTypes": Object {},
          },
          "$param2": TypeComposite {
            "_types": Array [],
            "existingTypes": Object {},
          },
        },
      },
      "types": Array [
        TypeName {
          "name": "",
        },
        TypeName {
          "name": "boolean",
        },
      ],
    },
    "location": Object {
      "range": Object {
        "end": 1450,
        "start": 1252,
      },
      "uri": "case/class_methods.php",
    },
    "modifier": SymbolModifier {
      "modifier": 0,
      "visibility": 1,
    },
    "name": TypeName {
      "name": "publicMethod1",
    },
    "scope": TypeName {
      "name": "\\\\ClassWithMethod",
    },
  },
]
`;

exports[`Testing functions around references returns class constant ref before variable 1`] = `
MethodCallExpression {
  "argumentList": ArgumentExpressionList {
    "_callExpression": [Circular],
    "_scope": null,
    "_type": null,
    "arguments": Array [],
    "commaOffsets": Array [],
    "location": Object {
      "range": Object {
        "end": 44,
        "start": 44,
      },
      "uri": "file:///C:/Users/johnn/Development/phpintel/case/reference/scopedMemberBeforeVariable.php",
    },
  },
  "hasArrow": true,
  "location": Object {
    "range": Object {
      "end": 45,
      "start": 9,
    },
    "uri": "file:///C:/Users/johnn/Development/phpintel/case/reference/scopedMemberBeforeVariable.php",
  },
  "noOpenParenthesis": 0,
  "refKind": 15,
  "scope": TypeName {
    "name": "requires",
  },
  "startParenthesisOffset": 44,
  "type": TypeName {
    "name": "js",
  },
}
`;

exports[`Testing functions around references should return the reference at the cursor 1`] = `
Array [
  Object {
    "location": Object {
      "range": Object {
        "end": 30,
        "start": 21,
      },
      "uri": "case/reference/references.php",
    },
    "memberLocation": undefined,
    "ranges": undefined,
    "refKind": 8,
    "refName": undefined,
    "scope": null,
    "scopeRange": undefined,
    "type": TypeName {
      "name": "\\\\TestClass",
    },
  },
  Object {
    "location": Object {
      "range": Object {
        "end": 30,
        "start": 21,
      },
      "uri": "case/reference/references.php",
    },
    "memberLocation": undefined,
    "ranges": undefined,
    "refKind": 8,
    "refName": undefined,
    "scope": null,
    "scopeRange": undefined,
    "type": TypeName {
      "name": "\\\\TestClass",
    },
  },
  Object {
    "location": Object {
      "range": Object {
        "end": 30,
        "start": 21,
      },
      "uri": "case/reference/references.php",
    },
    "memberLocation": undefined,
    "ranges": undefined,
    "refKind": 8,
    "refName": undefined,
    "scope": null,
    "scopeRange": undefined,
    "type": TypeName {
      "name": "\\\\TestClass",
    },
  },
  Object {
    "location": Object {
      "range": Object {
        "end": 51,
        "start": 37,
      },
      "uri": "case/reference/references.php",
    },
    "memberLocation": undefined,
    "ranges": undefined,
    "refKind": 1,
    "refName": undefined,
    "scope": null,
    "scopeRange": undefined,
    "type": TypeName {
      "name": "\\\\test_function1",
    },
  },
  Object {
    "location": Object {
      "range": Object {
        "end": 51,
        "start": 37,
      },
      "uri": "case/reference/references.php",
    },
    "memberLocation": undefined,
    "ranges": undefined,
    "refKind": 1,
    "refName": undefined,
    "scope": null,
    "scopeRange": undefined,
    "type": TypeName {
      "name": "\\\\test_function1",
    },
  },
  Object {
    "location": Object {
      "range": Object {
        "end": 51,
        "start": 37,
      },
      "uri": "case/reference/references.php",
    },
    "memberLocation": undefined,
    "ranges": undefined,
    "refKind": 1,
    "refName": undefined,
    "scope": null,
    "scopeRange": undefined,
    "type": TypeName {
      "name": "\\\\test_function1",
    },
  },
  Object {
    "location": Object {
      "range": Object {
        "end": 241,
        "start": 226,
      },
      "uri": "case/reference/references.php",
    },
    "memberLocation": undefined,
    "ranges": undefined,
    "refKind": 9,
    "refName": undefined,
    "scope": null,
    "scopeRange": undefined,
    "type": TypeName {
      "name": "\\\\ClassWithMethod",
    },
  },
  Object {
    "location": Object {
      "range": Object {
        "end": 241,
        "start": 226,
      },
      "uri": "case/reference/references.php",
    },
    "memberLocation": undefined,
    "ranges": undefined,
    "refKind": 9,
    "refName": undefined,
    "scope": null,
    "scopeRange": undefined,
    "type": TypeName {
      "name": "\\\\ClassWithMethod",
    },
  },
  Object {
    "location": Object {
      "range": Object {
        "end": 255,
        "start": 243,
      },
      "uri": "case/reference/references.php",
    },
    "memberLocation": undefined,
    "ranges": undefined,
    "refKind": 10,
    "refName": undefined,
    "scope": TypeName {
      "name": "\\\\ClassWithMethod",
    },
    "scopeRange": undefined,
    "type": TypeName {
      "name": "staticMethod",
    },
  },
  Object {
    "location": Object {
      "range": Object {
        "end": 255,
        "start": 243,
      },
      "uri": "case/reference/references.php",
    },
    "memberLocation": undefined,
    "ranges": undefined,
    "refKind": 10,
    "refName": undefined,
    "scope": TypeName {
      "name": "\\\\ClassWithMethod",
    },
    "scopeRange": undefined,
    "type": TypeName {
      "name": "staticMethod",
    },
  },
  Object {
    "location": Object {
      "range": Object {
        "end": 304,
        "start": 272,
      },
      "uri": "case/reference/references.php",
    },
    "memberLocation": undefined,
    "ranges": undefined,
    "refKind": 11,
    "refName": undefined,
    "scope": TypeName {
      "name": "\\\\ClassWithMethod",
    },
    "scopeRange": undefined,
    "type": TypeName {
      "name": "$staticVariable",
    },
  },
  Object {
    "location": Object {
      "range": Object {
        "end": 304,
        "start": 272,
      },
      "uri": "case/reference/references.php",
    },
    "memberLocation": undefined,
    "ranges": undefined,
    "refKind": 11,
    "refName": undefined,
    "scope": TypeName {
      "name": "\\\\ClassWithMethod",
    },
    "scopeRange": undefined,
    "type": TypeName {
      "name": "$staticVariable",
    },
  },
  Object {
    "location": Object {
      "range": Object {
        "end": 340,
        "start": 315,
      },
      "uri": "case/reference/references.php",
    },
    "memberLocation": undefined,
    "ranges": undefined,
    "refKind": 12,
    "refName": undefined,
    "scope": TypeName {
      "name": "\\\\ClassWithConst",
    },
    "scopeRange": undefined,
    "type": TypeName {
      "name": "IS_ACTIVE",
    },
  },
  Object {
    "location": Object {
      "range": Object {
        "end": 340,
        "start": 315,
      },
      "uri": "case/reference/references.php",
    },
    "memberLocation": undefined,
    "ranges": undefined,
    "refKind": 12,
    "refName": undefined,
    "scope": TypeName {
      "name": "\\\\ClassWithConst",
    },
    "scopeRange": undefined,
    "type": TypeName {
      "name": "IS_ACTIVE",
    },
  },
  Object {
    "location": Object {
      "range": Object {
        "end": 371,
        "start": 351,
      },
      "uri": "case/reference/references.php",
    },
    "memberLocation": undefined,
    "ranges": undefined,
    "refKind": 6,
    "refName": undefined,
    "scope": null,
    "scopeRange": undefined,
    "type": TypeName {
      "name": "\\\\TEST_DEFINE_CONSTANT",
    },
  },
  Object {
    "location": Object {
      "range": Object {
        "end": 481,
        "start": 460,
      },
      "uri": "case/reference/references.php",
    },
    "memberLocation": Object {
      "range": Object {
        "end": 481,
        "start": 469,
      },
      "uri": "case/reference/references.php",
    },
    "ranges": undefined,
    "refKind": 14,
    "refName": undefined,
    "scope": TypeComposite {
      "_types": Array [
        TypeName {
          "name": "$class1",
        },
        TypeName {
          "name": "\\\\TestClass",
        },
      ],
      "existingTypes": Object {
        "$class1": true,
        "TestClass": true,
      },
    },
    "scopeRange": undefined,
    "type": TypeName {
      "name": "testProperty",
    },
  },
  Object {
    "location": Object {
      "range": Object {
        "end": 481,
        "start": 460,
      },
      "uri": "case/reference/references.php",
    },
    "memberLocation": Object {
      "range": Object {
        "end": 481,
        "start": 469,
      },
      "uri": "case/reference/references.php",
    },
    "ranges": undefined,
    "refKind": 14,
    "refName": undefined,
    "scope": TypeComposite {
      "_types": Array [
        TypeName {
          "name": "$class1",
        },
        TypeName {
          "name": "\\\\TestClass",
        },
      ],
      "existingTypes": Object {
        "$class1": true,
        "TestClass": true,
      },
    },
    "scopeRange": undefined,
    "type": TypeName {
      "name": "testProperty",
    },
  },
  Object {
    "location": Object {
      "range": Object {
        "end": 505,
        "start": 484,
      },
      "uri": "case/reference/references.php",
    },
    "memberLocation": undefined,
    "ranges": undefined,
    "refKind": 15,
    "refName": undefined,
    "scope": TypeComposite {
      "_types": Array [
        TypeName {
          "name": "$class1",
        },
        TypeName {
          "name": "\\\\TestClass",
        },
      ],
      "existingTypes": Object {
        "$class1": true,
        "TestClass": true,
      },
    },
    "scopeRange": undefined,
    "type": TypeName {
      "name": "testMethod",
    },
  },
  Object {
    "location": Object {
      "range": Object {
        "end": 505,
        "start": 484,
      },
      "uri": "case/reference/references.php",
    },
    "memberLocation": undefined,
    "ranges": undefined,
    "refKind": 15,
    "refName": undefined,
    "scope": TypeComposite {
      "_types": Array [
        TypeName {
          "name": "$class1",
        },
        TypeName {
          "name": "\\\\TestClass",
        },
      ],
      "existingTypes": Object {
        "$class1": true,
        "TestClass": true,
      },
    },
    "scopeRange": undefined,
    "type": TypeName {
      "name": "testMethod",
    },
  },
]
`;

exports[`Testing functions around references should return the reference at the cursor 2`] = `
Array [
  Class {
    "extend": null,
    "implements": Array [
      TypeName {
        "name": "TestInterface",
      },
    ],
    "location": Object {
      "range": Object {
        "end": 1911,
        "start": 924,
      },
      "uri": "case/global_symbols.php",
    },
    "modifier": SymbolModifier {
      "modifier": 0,
      "visibility": 0,
    },
    "name": TypeName {
      "name": "\\\\TestClass",
    },
    "traits": Array [],
  },
  Class {
    "extend": null,
    "implements": Array [
      TypeName {
        "name": "TestInterface",
      },
    ],
    "location": Object {
      "range": Object {
        "end": 1911,
        "start": 924,
      },
      "uri": "case/global_symbols.php",
    },
    "modifier": SymbolModifier {
      "modifier": 0,
      "visibility": 0,
    },
    "name": TypeName {
      "name": "\\\\TestClass",
    },
    "traits": Array [],
  },
  Class {
    "extend": null,
    "implements": Array [
      TypeName {
        "name": "TestInterface",
      },
    ],
    "location": Object {
      "range": Object {
        "end": 1911,
        "start": 924,
      },
      "uri": "case/global_symbols.php",
    },
    "modifier": SymbolModifier {
      "modifier": 0,
      "visibility": 0,
    },
    "name": TypeName {
      "name": "\\\\TestClass",
    },
    "traits": Array [],
  },
  Function {
    "description": "",
    "name": TypeName {
      "name": "\\\\test_function1",
    },
    "parameters": Array [
      Parameter {
        "description": "",
        "location": Object {},
        "name": "$stringParam",
        "refKind": 3,
        "scope": null,
        "type": TypeComposite {
          "_types": Array [
            TypeName {
              "name": "string",
            },
          ],
          "existingTypes": Object {
            "string": true,
          },
        },
        "value": "",
      },
      Parameter {
        "description": "",
        "location": Object {},
        "name": "$intParam",
        "refKind": 3,
        "scope": null,
        "type": TypeComposite {
          "_types": Array [
            TypeName {
              "name": "int",
            },
          ],
          "existingTypes": Object {
            "int": true,
          },
        },
        "value": "",
      },
      Parameter {
        "description": "",
        "location": Object {},
        "name": "$boolParam",
        "refKind": 3,
        "scope": null,
        "type": TypeComposite {
          "_types": Array [
            TypeName {
              "name": "boolean",
            },
          ],
          "existingTypes": Object {
            "boolean": true,
          },
        },
        "value": "",
      },
      Parameter {
        "description": "",
        "location": Object {},
        "name": "$floatParam",
        "refKind": 3,
        "scope": null,
        "type": TypeComposite {
          "_types": Array [
            TypeName {
              "name": "float",
            },
          ],
          "existingTypes": Object {
            "float": true,
          },
        },
        "value": "",
      },
    ],
    "scopeVar": ScopeVar {
      "globalVariables": Map {},
      "isTop": false,
      "location": Object {
        "range": Object {
          "end": 582,
          "start": 7,
        },
        "uri": "case/function_declare.php",
      },
      "variables": Object {
        "$boolParam": TypeComposite {
          "_types": Array [
            TypeName {
              "name": "boolean",
            },
          ],
          "existingTypes": Object {
            "boolean": true,
          },
        },
        "$floatParam": TypeComposite {
          "_types": Array [
            TypeName {
              "name": "float",
            },
          ],
          "existingTypes": Object {
            "float": true,
          },
        },
        "$intParam": TypeComposite {
          "_types": Array [
            TypeName {
              "name": "int",
            },
          ],
          "existingTypes": Object {
            "int": true,
          },
        },
        "$stringParam": TypeComposite {
          "_types": Array [
            TypeName {
              "name": "string",
            },
          ],
          "existingTypes": Object {
            "string": true,
          },
        },
        "$test": TypeComposite {
          "_types": Array [
            TypeName {
              "name": "int",
            },
          ],
          "existingTypes": Object {
            "int": true,
          },
        },
      },
    },
    "types": Array [
      TypeName {
        "name": "boolean",
      },
      TypeName {
        "name": "string",
      },
      TypeName {
        "name": "int",
      },
      TypeName {
        "name": "float",
      },
      TypeName {
        "name": "\\\\TestClass",
      },
    ],
  },
  Function {
    "description": "",
    "name": TypeName {
      "name": "\\\\test_function1",
    },
    "parameters": Array [
      Parameter {
        "description": "",
        "location": Object {},
        "name": "$stringParam",
        "refKind": 3,
        "scope": null,
        "type": TypeComposite {
          "_types": Array [
            TypeName {
              "name": "string",
            },
          ],
          "existingTypes": Object {
            "string": true,
          },
        },
        "value": "",
      },
      Parameter {
        "description": "",
        "location": Object {},
        "name": "$intParam",
        "refKind": 3,
        "scope": null,
        "type": TypeComposite {
          "_types": Array [
            TypeName {
              "name": "int",
            },
          ],
          "existingTypes": Object {
            "int": true,
          },
        },
        "value": "",
      },
      Parameter {
        "description": "",
        "location": Object {},
        "name": "$boolParam",
        "refKind": 3,
        "scope": null,
        "type": TypeComposite {
          "_types": Array [
            TypeName {
              "name": "boolean",
            },
          ],
          "existingTypes": Object {
            "boolean": true,
          },
        },
        "value": "",
      },
      Parameter {
        "description": "",
        "location": Object {},
        "name": "$floatParam",
        "refKind": 3,
        "scope": null,
        "type": TypeComposite {
          "_types": Array [
            TypeName {
              "name": "float",
            },
          ],
          "existingTypes": Object {
            "float": true,
          },
        },
        "value": "",
      },
    ],
    "scopeVar": ScopeVar {
      "globalVariables": Map {},
      "isTop": false,
      "location": Object {
        "range": Object {
          "end": 582,
          "start": 7,
        },
        "uri": "case/function_declare.php",
      },
      "variables": Object {
        "$boolParam": TypeComposite {
          "_types": Array [
            TypeName {
              "name": "boolean",
            },
          ],
          "existingTypes": Object {
            "boolean": true,
          },
        },
        "$floatParam": TypeComposite {
          "_types": Array [
            TypeName {
              "name": "float",
            },
          ],
          "existingTypes": Object {
            "float": true,
          },
        },
        "$intParam": TypeComposite {
          "_types": Array [
            TypeName {
              "name": "int",
            },
          ],
          "existingTypes": Object {
            "int": true,
          },
        },
        "$stringParam": TypeComposite {
          "_types": Array [
            TypeName {
              "name": "string",
            },
          ],
          "existingTypes": Object {
            "string": true,
          },
        },
        "$test": TypeComposite {
          "_types": Array [
            TypeName {
              "name": "int",
            },
          ],
          "existingTypes": Object {
            "int": true,
          },
        },
      },
    },
    "types": Array [
      TypeName {
        "name": "boolean",
      },
      TypeName {
        "name": "string",
      },
      TypeName {
        "name": "int",
      },
      TypeName {
        "name": "float",
      },
      TypeName {
        "name": "\\\\TestClass",
      },
    ],
  },
  Function {
    "description": "",
    "name": TypeName {
      "name": "\\\\test_function1",
    },
    "parameters": Array [
      Parameter {
        "description": "",
        "location": Object {},
        "name": "$stringParam",
        "refKind": 3,
        "scope": null,
        "type": TypeComposite {
          "_types": Array [
            TypeName {
              "name": "string",
            },
          ],
          "existingTypes": Object {
            "string": true,
          },
        },
        "value": "",
      },
      Parameter {
        "description": "",
        "location": Object {},
        "name": "$intParam",
        "refKind": 3,
        "scope": null,
        "type": TypeComposite {
          "_types": Array [
            TypeName {
              "name": "int",
            },
          ],
          "existingTypes": Object {
            "int": true,
          },
        },
        "value": "",
      },
      Parameter {
        "description": "",
        "location": Object {},
        "name": "$boolParam",
        "refKind": 3,
        "scope": null,
        "type": TypeComposite {
          "_types": Array [
            TypeName {
              "name": "boolean",
            },
          ],
          "existingTypes": Object {
            "boolean": true,
          },
        },
        "value": "",
      },
      Parameter {
        "description": "",
        "location": Object {},
        "name": "$floatParam",
        "refKind": 3,
        "scope": null,
        "type": TypeComposite {
          "_types": Array [
            TypeName {
              "name": "float",
            },
          ],
          "existingTypes": Object {
            "float": true,
          },
        },
        "value": "",
      },
    ],
    "scopeVar": ScopeVar {
      "globalVariables": Map {},
      "isTop": false,
      "location": Object {
        "range": Object {
          "end": 582,
          "start": 7,
        },
        "uri": "case/function_declare.php",
      },
      "variables": Object {
        "$boolParam": TypeComposite {
          "_types": Array [
            TypeName {
              "name": "boolean",
            },
          ],
          "existingTypes": Object {
            "boolean": true,
          },
        },
        "$floatParam": TypeComposite {
          "_types": Array [
            TypeName {
              "name": "float",
            },
          ],
          "existingTypes": Object {
            "float": true,
          },
        },
        "$intParam": TypeComposite {
          "_types": Array [
            TypeName {
              "name": "int",
            },
          ],
          "existingTypes": Object {
            "int": true,
          },
        },
        "$stringParam": TypeComposite {
          "_types": Array [
            TypeName {
              "name": "string",
            },
          ],
          "existingTypes": Object {
            "string": true,
          },
        },
        "$test": TypeComposite {
          "_types": Array [
            TypeName {
              "name": "int",
            },
          ],
          "existingTypes": Object {
            "int": true,
          },
        },
      },
    },
    "types": Array [
      TypeName {
        "name": "boolean",
      },
      TypeName {
        "name": "string",
      },
      TypeName {
        "name": "int",
      },
      TypeName {
        "name": "float",
      },
      TypeName {
        "name": "\\\\TestClass",
      },
    ],
  },
  Class {
    "extend": null,
    "implements": Array [],
    "location": Object {
      "range": Object {
        "end": 1452,
        "start": 7,
      },
      "uri": "case/class_methods.php",
    },
    "modifier": SymbolModifier {
      "modifier": 0,
      "visibility": 0,
    },
    "name": TypeName {
      "name": "\\\\ClassWithMethod",
    },
    "traits": Array [],
  },
  Class {
    "extend": null,
    "implements": Array [],
    "location": Object {
      "range": Object {
        "end": 1452,
        "start": 7,
      },
      "uri": "case/class_methods.php",
    },
    "modifier": SymbolModifier {
      "modifier": 0,
      "visibility": 0,
    },
    "name": TypeName {
      "name": "\\\\ClassWithMethod",
    },
    "traits": Array [],
  },
  Method {
    "description": "",
    "func": Function {
      "description": "",
      "name": undefined,
      "parameters": Array [
        Parameter {
          "description": "",
          "location": Object {},
          "name": "$param1",
          "refKind": 3,
          "scope": null,
          "type": TypeComposite {
            "_types": Array [],
            "existingTypes": Object {},
          },
          "value": "",
        },
        Parameter {
          "description": "",
          "location": Object {},
          "name": "$param2",
          "refKind": 3,
          "scope": null,
          "type": TypeComposite {
            "_types": Array [],
            "existingTypes": Object {},
          },
          "value": "",
        },
      ],
      "scopeVar": ScopeVar {
        "globalVariables": Map {},
        "isTop": false,
        "location": Object {},
        "variables": Object {
          "$param1": TypeComposite {
            "_types": Array [],
            "existingTypes": Object {},
          },
          "$param2": TypeComposite {
            "_types": Array [],
            "existingTypes": Object {},
          },
        },
      },
      "types": Array [
        TypeName {
          "name": "boolean",
        },
      ],
    },
    "location": Object {
      "range": Object {
        "end": 1246,
        "start": 1164,
      },
      "uri": "case/class_methods.php",
    },
    "modifier": SymbolModifier {
      "modifier": 32,
      "visibility": 1,
    },
    "name": TypeName {
      "name": "staticMethod",
    },
    "scope": TypeName {
      "name": "\\\\ClassWithMethod",
    },
  },
  Method {
    "description": "",
    "func": Function {
      "description": "",
      "name": undefined,
      "parameters": Array [
        Parameter {
          "description": "",
          "location": Object {},
          "name": "$param1",
          "refKind": 3,
          "scope": null,
          "type": TypeComposite {
            "_types": Array [],
            "existingTypes": Object {},
          },
          "value": "",
        },
        Parameter {
          "description": "",
          "location": Object {},
          "name": "$param2",
          "refKind": 3,
          "scope": null,
          "type": TypeComposite {
            "_types": Array [],
            "existingTypes": Object {},
          },
          "value": "",
        },
      ],
      "scopeVar": ScopeVar {
        "globalVariables": Map {},
        "isTop": false,
        "location": Object {},
        "variables": Object {
          "$param1": TypeComposite {
            "_types": Array [],
            "existingTypes": Object {},
          },
          "$param2": TypeComposite {
            "_types": Array [],
            "existingTypes": Object {},
          },
        },
      },
      "types": Array [
        TypeName {
          "name": "boolean",
        },
      ],
    },
    "location": Object {
      "range": Object {
        "end": 1246,
        "start": 1164,
      },
      "uri": "case/class_methods.php",
    },
    "modifier": SymbolModifier {
      "modifier": 32,
      "visibility": 1,
    },
    "name": TypeName {
      "name": "staticMethod",
    },
    "scope": TypeName {
      "name": "\\\\ClassWithMethod",
    },
  },
  Property {
    "_variable": Variable {
      "expression": Expression {},
      "location": Object {},
      "name": "",
      "refKind": 2,
      "scope": null,
      "scopeRange": undefined,
      "type": TypeComposite {
        "_types": Array [
          TypeName {
            "name": "boolean",
          },
        ],
        "existingTypes": Object {
          "boolean": true,
        },
      },
    },
    "description": "",
    "location": Object {
      "range": Object {
        "end": 95,
        "start": 72,
      },
      "uri": "case/class_methods.php",
    },
    "modifier": SymbolModifier {
      "modifier": 32,
      "visibility": 1,
    },
    "name": "$staticVariable",
    "scope": TypeName {
      "name": "\\\\ClassWithMethod",
    },
  },
  Property {
    "_variable": Variable {
      "expression": Expression {},
      "location": Object {},
      "name": "",
      "refKind": 2,
      "scope": null,
      "scopeRange": undefined,
      "type": TypeComposite {
        "_types": Array [
          TypeName {
            "name": "boolean",
          },
        ],
        "existingTypes": Object {
          "boolean": true,
        },
      },
    },
    "description": "",
    "location": Object {
      "range": Object {
        "end": 95,
        "start": 72,
      },
      "uri": "case/class_methods.php",
    },
    "modifier": SymbolModifier {
      "modifier": 32,
      "visibility": 1,
    },
    "name": "$staticVariable",
    "scope": TypeName {
      "name": "\\\\ClassWithMethod",
    },
  },
  ClassConstant {
    "constant": Constant {
      "name": TypeName {
        "name": "",
      },
      "type": TypeName {
        "name": "boolean",
      },
      "value": "true",
    },
    "location": Object {
      "range": Object {
        "end": 184,
        "start": 168,
      },
      "uri": "case/class_constants.php",
    },
    "name": TypeName {
      "name": "IS_ACTIVE",
    },
    "scope": TypeName {
      "name": "\\\\ClassWithConst",
    },
  },
  ClassConstant {
    "constant": Constant {
      "name": TypeName {
        "name": "",
      },
      "type": TypeName {
        "name": "boolean",
      },
      "value": "true",
    },
    "location": Object {
      "range": Object {
        "end": 184,
        "start": 168,
      },
      "uri": "case/class_constants.php",
    },
    "name": TypeName {
      "name": "IS_ACTIVE",
    },
    "scope": TypeName {
      "name": "\\\\ClassWithConst",
    },
  },
  DefineConstant {
    "name": TypeName {
      "name": "\\\\TEST_DEFINE_CONSTANT",
    },
    "type": TypeName {
      "name": "boolean",
    },
    "value": "false",
  },
  Property {
    "_variable": Variable {
      "expression": Expression {},
      "location": Object {},
      "name": "",
      "refKind": 2,
      "scope": null,
      "scopeRange": undefined,
      "type": TypeComposite {
        "_types": Array [
          TypeName {
            "name": "TestClass",
          },
        ],
        "existingTypes": Object {
          "TestClass": true,
        },
      },
    },
    "description": "Reprehenderit magna velit mollit ipsum do.
",
    "location": Object {
      "range": Object {
        "end": 1388,
        "start": 1375,
      },
      "uri": "case/global_symbols.php",
    },
    "modifier": SymbolModifier {
      "modifier": 0,
      "visibility": 1,
    },
    "name": "$testProperty",
    "scope": TypeName {
      "name": "\\\\TestClass",
    },
  },
  Property {
    "_variable": Variable {
      "expression": Expression {},
      "location": Object {},
      "name": "",
      "refKind": 2,
      "scope": null,
      "scopeRange": undefined,
      "type": TypeComposite {
        "_types": Array [
          TypeName {
            "name": "TestClass",
          },
        ],
        "existingTypes": Object {
          "TestClass": true,
        },
      },
    },
    "description": "Reprehenderit magna velit mollit ipsum do.
",
    "location": Object {
      "range": Object {
        "end": 1388,
        "start": 1375,
      },
      "uri": "case/global_symbols.php",
    },
    "modifier": SymbolModifier {
      "modifier": 0,
      "visibility": 1,
    },
    "name": "$testProperty",
    "scope": TypeName {
      "name": "\\\\TestClass",
    },
  },
  Method {
    "description": "Non culpa nostrud mollit esse sunt laboris in irure ullamco cupidatat amet.
",
    "func": Function {
      "description": "",
      "name": undefined,
      "parameters": Array [
        Parameter {
          "description": "",
          "location": Object {},
          "name": "$testParameter",
          "refKind": 3,
          "scope": null,
          "type": TypeComposite {
            "_types": Array [
              TypeName {
                "name": "TestClass",
              },
            ],
            "existingTypes": Object {
              "TestClass": true,
            },
          },
          "value": "",
        },
      ],
      "scopeVar": ScopeVar {
        "globalVariables": Map {},
        "isTop": false,
        "location": Object {},
        "variables": Object {
          "$testParameter": TypeComposite {
            "_types": Array [
              TypeName {
                "name": "TestClass",
              },
            ],
            "existingTypes": Object {
              "TestClass": true,
            },
          },
        },
      },
      "types": Array [],
    },
    "location": Object {
      "range": Object {
        "end": 1909,
        "start": 1794,
      },
      "uri": "case/global_symbols.php",
    },
    "modifier": SymbolModifier {
      "modifier": 0,
      "visibility": 1,
    },
    "name": TypeName {
      "name": "testMethod",
    },
    "scope": TypeName {
      "name": "\\\\TestClass",
    },
  },
  Method {
    "description": "Non culpa nostrud mollit esse sunt laboris in irure ullamco cupidatat amet.
",
    "func": Function {
      "description": "",
      "name": undefined,
      "parameters": Array [
        Parameter {
          "description": "",
          "location": Object {},
          "name": "$testParameter",
          "refKind": 3,
          "scope": null,
          "type": TypeComposite {
            "_types": Array [
              TypeName {
                "name": "TestClass",
              },
            ],
            "existingTypes": Object {
              "TestClass": true,
            },
          },
          "value": "",
        },
      ],
      "scopeVar": ScopeVar {
        "globalVariables": Map {},
        "isTop": false,
        "location": Object {},
        "variables": Object {
          "$testParameter": TypeComposite {
            "_types": Array [
              TypeName {
                "name": "TestClass",
              },
            ],
            "existingTypes": Object {
              "TestClass": true,
            },
          },
        },
      },
      "types": Array [],
    },
    "location": Object {
      "range": Object {
        "end": 1909,
        "start": 1794,
      },
      "uri": "case/global_symbols.php",
    },
    "modifier": SymbolModifier {
      "modifier": 0,
      "visibility": 1,
    },
    "name": TypeName {
      "name": "testMethod",
    },
    "scope": TypeName {
      "name": "\\\\TestClass",
    },
  },
]
`;
